source/capi.h

    typedef size_t        cppyy_scope_t;
    typedef cppyy_scope_t cppyy_type_t;
    typedef void*         cppyy_object_t;
    typedef intptr_t      cppyy_method_t;
    typedef size_t        cppyy_index_t;
    typedef void*         cppyy_funcaddr_t;
    RPY_EXPORTED
    cppyy_funcaddr_t cppyy_function_address(cppyy_method_t method);
    /* calculate offsets between declared and actual type, up-cast: direction > 0; down-cast: direction < 0 */
    RPY_EXPORTED
    ptrdiff_t cppyy_base_offset(cppyy_type_t derived, cppyy_type_t base, cppyy_object_t address, int direction);
    RPY_EXPORTED
    char* cppyy_method_name(cppyy_method_t);
    RPY_EXPORTED
    char* cppyy_method_full_name(cppyy_method_t);
    RPY_EXPORTED
    char* cppyy_method_mangled_name(cppyy_method_t);
    RPY_EXPORTED
    char* cppyy_method_result_type(cppyy_method_t);
    RPY_EXPORTED
    int cppyy_method_num_args(cppyy_method_t);
    RPY_EXPORTED
    int cppyy_method_req_args(cppyy_method_t);
    RPY_EXPORTED
    char* cppyy_method_arg_name(cppyy_method_t,int arg_index);
    RPY_EXPORTED
    char* cppyy_method_arg_type(cppyy_method_t, int arg_index);
    RPY_EXPORTED
    char* cppyy_method_arg_default(cppyy_method_t, int arg_index);
    RPY_EXPORTED
    char* cppyy_method_signature(cppyy_method_t, int show_formalargs);
    RPY_EXPORTED
    char* cppyy_method_signature_max(cppyy_method_t, int show_formalargs, int maxargs);
    RPY_EXPORTED
    int cppyy_is_const_method(cppyy_method_t);
    RPY_EXPORTED
    int cppyy_exists_method_template(cppyy_scope_t scope, const char* name);
    RPY_EXPORTED
    int cppyy_method_is_template(cppyy_scope_t scope, cppyy_index_t idx);
    RPY_EXPORTED
    cppyy_method_t cppyy_get_method_template(cppyy_scope_t scope, const char* name, const char* proto);
    RPY_EXPORTED
    cppyy_index_t cppyy_get_global_operator(
        cppyy_scope_t scope, cppyy_scope_t lc, cppyy_scope_t rc, const char* op);
    /* method properties ------------------------------------------------------ */
    RPY_EXPORTED
    int cppyy_is_publicmethod(cppyy_method_t);
    RPY_EXPORTED
    int cppyy_is_constructor(cppyy_method_t);
    RPY_EXPORTED
    int cppyy_is_destructor(cppyy_method_t);
    RPY_EXPORTED
    int cppyy_is_staticmethod(cppyy_method_t);
    RPY_EXPORTED
    char* cppyy_datamember_name(cppyy_scope_t scope, int datamember_index);
    RPY_EXPORTED
    char* cppyy_datamember_type(cppyy_scope_t scope, int datamember_index);
    RPY_EXPORTED
    intptr_t cppyy_datamember_offset(cppyy_scope_t scope, int datamember_index);
    RPY_EXPORTED
    int cppyy_get_dimension_size(cppyy_scope_t scope, cppyy_index_t idata, int dimension);
    RPY_EXPORTED
    cppyy_object_t cppyy_charp2stdstring(const char* str, size_t sz);
    RPY_EXPORTED
    const char* cppyy_stdstring2charp(cppyy_object_t ptr, size_t* lsz);
    RPY_EXPORTED
    cppyy_object_t cppyy_stdstring2stdstring(cppyy_object_t ptr);
    RPY_EXPORTED
    int         cppyy_vectorbool_getitem(cppyy_object_t ptr, int idx);
    RPY_EXPORTED
    void        cppyy_vectorbool_setitem(cppyy_object_t ptr, int idx, int value);