source/cling.d


 Method[] getMethods(string name)
 {
  import std.algorithm:map;
  import std.array:array;
  return methodIndices(name).map!(m => getMethodFromIndex(m)).array;
 }
/+
 string getTemplatedMethodName(cppyy_index_t index)
 {
     return cppyy_get_templated_method_name(handle,index).fromStringz.idup;
 }
+/
 bool methodIsTemplate(cppyy_index_t index)
 {
  return (cppyy_method_is_template(handle,index)!=0);
 }

 bool existsMethodTemplate(string name)
 {
     return (cppyy_exists_method_template(handle,name.toStringz)!=0);
 }
 Method getMethodTemplate(string name, string proto)
 {
     return Method(cppyy_get_method_template(handle,name.toStringz,proto.toStringz));
 }


    ptrdiff_t offset(Type derived, Type base, bool upCast)
 {
  return cppyy_base_offset(derived.handle,base.handle,cast(void*)this.handle,upCast ? 1: -1);
 }

    cppyy_index_t getGlobalOperator(Scope lc, Scope rc, string op)
 {
  return cppyy_get_global_operator(handle,lc.handle,rc.handle,op.toStringz);
 }

    int getDimensionSize(cppyy_index_t idata, int dimension)
 {
  return cppyy_get_dimension_size(handle,idata,dimension);
 }

    cppyy_funcaddr_t getAddress(Method method)
 {
  return cppyy_function_address(method.handle);
 }
}

struct Method
{
 cppyy_method_t handle;

 bool isPublic()
 {
  return (cppyy_is_publicmethod(handle)!=0);
 }

 bool isConstructor()
 {
  return (cppyy_is_constructor(handle)!=0);
 }

 bool isDestructor()
 {
    return (cppyy_is_destructor(handle)!=0);
 }

 bool isStatic()
 {
  return (cppyy_is_staticmethod(handle)!=0);
 }

 string name()
 {
  return cppyy_method_name(handle).fromStringz.idup;
 }

 string fullName()
 {
     return cppyy_method_full_name(handle).fromStringz.idup;
 }

 string mangledName()
 {
     return cppyy_method_mangled_name(handle).fromStringz.idup;
 }

 string resultType()
 {
  return cppyy_method_result_type(handle).fromStringz.idup;
 }
 int numArgs()
 {
  return cppyy_method_num_args(handle);
 }

 int requiredNumArgs()
 {
  return cppyy_method_req_args(handle);
 }

 string signatureNoFormalArgs()
 {
     return cppyy_method_signature(handle,0).fromStringz.idup;
 }

 string signatureFormalArgs()
 {
     return cppyy_method_signature(handle,1).fromStringz.idup;
 }

 string signatureMaxNoFormalArgs(int maxArgs)
 {
     return cppyy_method_signature_max(handle,0,maxArgs).fromStringz.idup;
 }

 string signatureMaxFormalArgs(int maxArgs)
 {
     return cppyy_method_signature_max(handle,1,maxArgs).fromStringz.idup;
 }

 bool isConst()
 {
     return (cppyy_is_const_method(handle)!=0);
 }

    cppyy_funcaddr_t getAddress()
 {
  return cppyy_function_address(handle);
 }
}

struct MethodArgument
{
 cppyy_method_t handle;
 int index;

 string name()
 {
  return cppyy_method_arg_name(handle,index).fromStringz.idup;
 }

 string type()
 {
  return cppyy_method_arg_type(handle,index).fromStringz.idup;
 }

 string defaultArgument()
 {
     return cppyy_method_arg_default(handle,index).fromStringz.idup;
 }

 string signature(bool showFormalArgs = false)
 {
  return cppyy_method_signature(handle,showFormalArgs?1:0).fromStringz.idup;
 }

 string signatureMax(bool showFormalArgs, int maxArgs)
 {
  return cppyy_method_signature_max(handle,showFormalArgs,maxArgs).fromStringz.idup;
 }
}

struct DataMember
{
 cppyy_scope_t scopeHandle;
 int index;

 string name()
 {
  return cppyy_datamember_name(scopeHandle,index).fromStringz.idup;
 }

 string type()
 {
  return cppyy_datamember_type(scopeHandle,index).fromStringz.idup;
 }

 size_t offset()
 {
  return cppyy_datamember_offset(scopeHandle,index);
 }
}



final class StdString
{
 cppyy_object_t handle;

 this(cppyy_object_t handle)
 {
  this.handle = handle;
 }

 this(string s)
 {
  this.handle = cppyy_charp2stdstring(s.ptr,s.length);
 }

    override string toString()
 {
  size_t len;
  auto p = cppyy_stdstring2charp(handle,&len);
  return p[0..len].idup;
 }

    StdString dup()
 {
     return new StdString(cppyy_stdstring2stdstring(handle));
 }
}

struct StdVectorBool
{
 cppyy_object_t handle;

 bool get(int index)
 {
     return (cppyy_vectorbool_getitem(handle,index)!=0);
 }

 void set(int index, bool value)
 {
     cppyy_vectorbool_setitem(handle,index,value?1:0);
 }
}
